language/move-lang/tests/move_check/translated_ir_tests/move/borrow_tests/borrow_global_acquires_duplicate_annotation.exp
error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/translated_ir_tests/move/borrow_tests/borrow_global_acquires_duplicate_annotation.move:5:52
  │
5 │     public fun test(account: &signer) acquires T1, T1 {
  │                                                --  ^^ Duplicate acquires item
  │                                                │    
  │                                                Item previously listed here

